--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,19 @@
 <header>
+<h1 class="title">Drink of the moment</h1>
 
+<p class="text">
+  Gin, also known as gin, is one of the most
+  popular and appreciated alcoholic beverages
+  worldwide, especially for its versatility in
+  cocktails. Originally from Europe, this spirit has
+  evolved over the centuries and comes in a wide
+  range of styles and flavors.
+</p>
+
+<button class="primary-botton">
+  Try now
+  <i class="fa-light fa-chevron-right"></i>
+  <!-- <i class="fa-solid fa-house"></i> -->
+</button>
+<i class="fa-light fa-chevron-right"></i>
 </header>
