--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,22 +3,67 @@
 @import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root{
-  --primary-colo: #a1dbc3;
+  --base-color: #efece5;
+  --primary-color: #a1dbc3;
+  --primary-color-alternative: #5ba3a8;
   --second-color: #475751;
   --alternative-color: #574747;
   --font-color: #574747;
   --font-color-alternative: #fff;
+  --second-alternative-color: #111f28;
+
+  /* ### FONTS ### */
   --font-family: 'Figtree', sans-serif;
   /* font-family: 'Figtree', sans-serif;
   font-family: 'Allura', cursive;
   font-family: 'Dancing Script', cursive;
   font-family: 'Parisienne', cursive; */
+}
 
-  --frist-grey: #42413d;
-  --second-grey: #b2afac;
-  --third-grey: #959492;
-  --second-alternative-color: #111f28;
-  --third-alternative-color: #afb9c5;
-  --fourth-alternative-color: #e3cdb3;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: var(--font-family);
+}
 
+body{
+  background: var(--base-color);
+  font-family: var(--font-family);
+}
+
+h1.title{
+  font-size: 45px;
+  font-weight: 700;
+  font-family: var(--font-family);
+  color: var(--font-color);
+  font-stretch: expanded;
+}
+
+p.text{
+  font-size: 15px;
+  font-family: var(--font-family);
+  font-weight: 100;
+}
+
+button.primary-botton{
+  border-radius: 30px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 150px;
+  height: 50px;
+  border: none;
+  padding: 10px;
+  background: var(--primary-color);
+  color: var(--font-color);
+  font-size: 18px;
+  box-shadow: 0px 2px 0px 1px rgba(91,163,168,1);
+  //box-shadow: rgba(91, 163, 168, 0.16) 0px 3px 6px, rgba(91, 163, 168, 0.23) 0px 3px 6px;
+  cursor: pointer;
+  i{
+    border-radius: 50%;
+    color: var(--font-color-alternative);
+    background: var(--primary-color-alternative);
+  }
 }
