--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,8 +12,7 @@
 
 <button class="primary-botton">
   Try now
-  <i class="fa-light fa-chevron-right"></i>
-  <!-- <i class="fa-solid fa-house"></i> -->
+  <i class="pi pi-chevron-right"></i>
 </button>
-<i class="fa-light fa-chevron-right"></i>
+
 </header>
