--- a/src/app/pages/cocktail-landing/cocktail-landing.component.html
+++ b/src/app/pages/cocktail-landing/cocktail-landing.component.html
@@ -1,1 +1,8 @@
-<p>cocktail-landing works!</p>
+<div class="backGround-container-drinks-1">
+  <p>cocktail-landing works!</p>
+</div>
+
+<div class="backGround-container-drinks-2">
+  <p>cocktail-landing works!</p>
+</div>
+
