header navbar mobile

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="containerMenu" [class.active]="showDropDownMenu">
-      <nav>
+      <nav [class.active]="showDropDownMenu">
         <ul class="nav">
           <li><a href="#">Menu</a></li>
           <li><a href="#">Rewards</a></li>
