--- a/src/app/pages/cocktail-landing/cocktail-landing.component.html
+++ b/src/app/pages/cocktail-landing/cocktail-landing.component.html
@@ -1,1 +1,12 @@
 
+<div class="container">
+  <div class="banner">
+    banner
+  </div>
+  <div class="popularDrinksContainer">
+    drinks1
+  </div>
+  <div class="latestDrinksContainer">
+    drinks2
+  </div>
+</div>
