--- a/src/app/pages/cocktail-landing/cocktail-landing.component.html
+++ b/src/app/pages/cocktail-landing/cocktail-landing.component.html
@@ -1,12 +1,12 @@
 
 <div class="container">
   <div class="banner">
-    banner
+    <app-banner-landing></app-banner-landing>
   </div>
   <div class="popularDrinksContainer">
-    drinks1
+    <app-popular-drinks></app-popular-drinks>
   </div>
   <div class="latestDrinksContainer">
-    drinks2
+    <app-latest-drinks></app-latest-drinks>
   </div>
 </div>
