--- a/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.html
+++ b/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.html
@@ -1,1 +1,17 @@
-<p>banner-landing works!</p>
+<div class="containerbanner">
+  <div class="infoContet"></div>
+
+  <div class="imgBoxInfo">
+    <div class="imgBx">
+      <div class="bg1">
+        <div class="bg2">
+          <div class="ginContet">
+            <img src="assets/img/ilustraciones/Botella-Gin-centro.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="infoListCocktails"></div>
+</div>
