--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -199,10 +199,11 @@ header{
 
 @media screen and (min-width: 900px){
   header{
-
-
+    //background: yellow;
     .headerContent{
+      //background: orange;
       flex-direction: row;
+      max-width: 1200px;
 
       .toggle_btn{
         display: none;
