components Drinks responsive and desktop

--- a/src/app/pages/cocktail-landing/cocktail-landing.component.html
+++ b/src/app/pages/cocktail-landing/cocktail-landing.component.html
@@ -1,5 +1,13 @@
-
 <div class="container">
+  <div class="banner">
+    <app-banner-landing></app-banner-landing>
+  </div>
+</div>
+<!-- <app-banner-landing></app-banner-landing> -->
+
+<app-popular-drinks></app-popular-drinks>
+
+<!-- <div class="container">
   <div class="banner">
     <app-banner-landing></app-banner-landing>
   </div>
@@ -9,4 +17,4 @@
   <div class="latestDrinksContainer">
     <app-latest-drinks></app-latest-drinks>
   </div>
-</div>
+</div> -->
