--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@
   --font-color: #574747;
   --font-color-alternative: #fff;
   --second-alternative-color: #111f28;
+  --drinks-bg-color: #dfbed8;
 
   /* ### FONTS ### */
   --font-family: 'Figtree', sans-serif;
