--- a/src/app/pages/cocktail-landing/cocktail-landing.component.scss
+++ b/src/app/pages/cocktail-landing/cocktail-landing.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   padding: 5px;
   width: 100%;
+  height: 80vh;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -14,11 +15,20 @@
     justify-content: center;
     align-items: center;
     margin: 5px 0px;
+    background: yellow;
   }
   .banner{
     background: url(/assets/img/ilustraciones/Lineas-fondo.png);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 70%;
+    background-size: 95%;
+  }
+}
+
+@media screen and (min-width: 900px){
+  .container{
+    .banner{
+      background-size: 70%;
+    }
   }
 }
