--- a/src/app/pages/cocktail-landing/components/popular-drinks/popular-drinks.component.scss
+++ b/src/app/pages/cocktail-landing/components/popular-drinks/popular-drinks.component.scss
@@ -106,6 +106,13 @@
                     object-fit: cover;
                     transition: 0.5s ease-in-out;
                     //transform-origin: bottom;
+                    &:hover{
+                      cursor: pointer;
+                      -webkit-transform: scale(1.2);
+                      -ms-transform: scale(1.2);
+                      transform: scale(1.2);
+                      transition: 1s ease;
+                    }
                   }
                 }
               }
@@ -137,6 +144,8 @@
                   border-radius: 25px;
                   background: transparent;
                   transition: all 300ms ease;
+                  margin: 10px 0px;
+                  cursor: pointer;
                   &:hover{
                     background: var(--primary-color);
                     color: var(--font-color);
@@ -251,6 +260,13 @@
                     object-fit: cover;
                     transition: 0.5s ease-in-out;
                     //transform-origin: bottom;
+                    &:hover{
+                      cursor: pointer;
+                      -webkit-transform: scale(1.2);
+                      -ms-transform: scale(1.2);
+                      transform: scale(1.2);
+                      transition: 1s ease;
+                    }
                   }
                 }
               }
@@ -282,6 +298,8 @@
                   border-radius: 25px;
                   background: transparent;
                   transition: all 300ms ease;
+                  cursor: pointer;
+                  margin: 10px 0px;
                   &:hover{
                     background: var(--primary-color);
                     color: var(--font-color);
