--- a/src/app/pages/cocktail-landing/cocktail-landing.component.scss
+++ b/src/app/pages/cocktail-landing/cocktail-landing.component.scss
@@ -18,7 +18,7 @@
     background: yellow;
   }
   .banner{
-    background: url(/assets/img/ilustraciones/Lineas-fondo.png);
+    background: url(../../../assets/img/ilustraciones/Lineas-fondo.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 95%;
