--- a/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.html
+++ b/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.html
@@ -1,5 +1,9 @@
 <div class="containerbanner">
-  <div class="infoContet"></div>
+  <!-- <div class="infoContet">
+    <h1 class="title">
+      Drink of the moment
+    </h1>
+  </div> -->
 
   <div class="imgBoxInfo">
     <div class="imgBx">
