--- a/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.scss
+++ b/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.scss
@@ -2,12 +2,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
   width: 100%;
+  //height: 100%;
   flex-direction: column;
-  background: transparent;
+  //background: transparent;
+  //background: orange;
   padding: 5px;
-  .infoContet{}
+  /* .infoContet{
+    display: flex;
+    width: 100%;
+    background: green;
+    padding: 10px 0px;
+    margin: 10px 0px;
+    justify-content: center;
+    align-items: center;
+  } */
 
   .imgBoxInfo{
     display: flex;
@@ -84,6 +93,7 @@
 
 @media screen and (min-width: 900px){
   .containerbanner{
+    flex-wrap: wrap;
     width: 95%;
     height: 85%;
     max-width: 1300px;
