--- a/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.scss
+++ b/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.scss
@@ -8,15 +8,15 @@
   //background: transparent;
   //background: orange;
   padding: 5px;
-  /* .infoContet{
+  .infoContet{
     display: flex;
     width: 100%;
-    background: green;
+    //background: green;
     padding: 10px 0px;
     margin: 10px 0px;
     justify-content: center;
     align-items: center;
-  } */
+  }
 
   .imgBoxInfo{
     display: flex;
