--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,11 +2,11 @@
 
   <section class="headerContent">
 
-    <button class="toggle_btn" (click)="toggleDropDownMenu()">
+    <!-- <button class="toggle_btn" (click)="toggleDropDownMenu()">
       <div [class.active]="showDropDownMenu"></div>
       <div [class.active]="showDropDownMenu"></div>
       <div [class.active]="showDropDownMenu"></div>
-    </button>
+    </button> -->
 
     <div class="containerLogo">
       <a href="#">
