--- a/src/app/pages/cocktail-landing/cocktail-landing.component.html
+++ b/src/app/pages/cocktail-landing/cocktail-landing.component.html
@@ -1,11 +1,13 @@
-<div class="container">
-  <div class="banner">
-    <app-banner-landing></app-banner-landing>
-  </div>
+<!-- <div class="containerBanner">
+  <app-banner-landing></app-banner-landing>
 </div>
-<!-- <app-banner-landing></app-banner-landing> -->
 
-<app-popular-drinks></app-popular-drinks>
+<div class="popularDrinksContainer">
+  <app-popular-drinks></app-popular-drinks>
+</div> -->
+<app-banner-landing></app-banner-landing>
+
+<!-- <app-popular-drinks></app-popular-drinks> -->
 
 <!-- <div class="container">
   <div class="banner">
