--- a/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.html
+++ b/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.html
@@ -1,8 +1,28 @@
 <div class="containerbanner">
+
   <div class="infoContet">
     <h1 class="title">
       Drink of the moment
     </h1>
+    <div class="textContent">
+      <p class="text">
+        Gin, also known as gin, is one of the most
+        popular and appreciated alcoholic beverages
+        worldwide, especially for its versatility in
+        cocktails. Originally from Europe, this spirit has
+        evolved over the centuries and comes in a wide
+        range of styles and flavors.
+      </p>
+    </div>
+    <h1 class="title">
+      4.9
+    </h1>
+    <div class="containerbutton">
+      <button class="primary-botton">
+        Try now
+        <i class="pi pi-chevron-right"></i>
+      </button>
+    </div>
   </div>
 
   <div class="imgBoxInfo">
@@ -15,7 +35,27 @@
         </div>
       </div>
     </div>
+    <div class="containerbutton">
+      <button class="primary-botton">
+        Try now
+        <i class="pi pi-chevron-right"></i>
+      </button>
+    </div>
   </div>
 
-  <div class="infoListCocktails"></div>
+  <div class="infoListCocktails">
+    <div class="infoCocktail">
+      <div class="imgbxVersatily"></div>
+      <div class="text">
+        <h3 class="title3">Versatility</h3>
+        <P>
+          The range of flavors in gin is <br>
+          exceptionally wide, thanks to the <br>
+          variety of botaniclas that can be <br>
+          used in its productions
+        </P>
+      </div>
+    </div>
+  </div>
+
 </div>
