--- a/src/app/pages/cocktail-landing/cocktail-landing.component.scss
+++ b/src/app/pages/cocktail-landing/cocktail-landing.component.scss
@@ -1,34 +1,29 @@
-.container{
+/* .containerBanner{
   display: flex;
-  padding: 5px;
   width: 100%;
-  height: 80vh;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  .banner,
-  .popularDrinksContainer,
-  .latestDrinksContainer{
-    display: flex;
-    padding: 5px;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    margin: 5px 0px;
-    background: yellow;
-  }
-  .banner{
-    background: url(../../../assets/img/ilustraciones/Lineas-fondo.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 95%;
-  }
+  //background: purple;
+  background: url(../../../assets/img/ilustraciones/Lineas-fondo.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 95%;
+  margin: 10px 0px;
+  transition: all 300ms ease;
+}
+.popularDrinksContainer{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  //background: purple;
+  margin: 10px 0px;
+  transition: all 300ms ease;
 }
 
 @media screen and (min-width: 900px){
-  .container{
-    .banner{
-      background-size: 70%;
-    }
+  .containerBanner{
+    background-size: 70%;
   }
 }
+ */
