--- a/src/app/pages/cocktail-landing/cocktail-landing.component.html
+++ b/src/app/pages/cocktail-landing/cocktail-landing.component.html
@@ -1,11 +1,12 @@
-<!-- <div class="containerBanner">
+<div class="containerComponent">
   <app-banner-landing></app-banner-landing>
 </div>
 
-<div class="popularDrinksContainer">
+<!-- <div class="popularDrinksContainer">
   <app-popular-drinks></app-popular-drinks>
 </div> -->
-<app-banner-landing></app-banner-landing>
+
+<!-- <app-banner-landing></app-banner-landing> -->
 
 <!-- <app-popular-drinks></app-popular-drinks> -->
 
