--- a/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.html
+++ b/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.html
@@ -43,9 +43,13 @@
     </div>
   </div>
 
-  <div class="infoListCocktails">
+  <div class="infoList">
     <div class="infoCocktail">
-      <div class="imgbxVersatily"></div>
+      <div class="imgbxContainer">
+        <div class="bxImg">
+          <img src="../../../../../assets/img/ilustraciones/water-solid 1.png" alt="">
+        </div>
+      </div>
       <div class="text">
         <h3 class="title3">Versatility</h3>
         <P>
@@ -53,6 +57,38 @@
           exceptionally wide, thanks to the <br>
           variety of botaniclas that can be <br>
           used in its productions
+        </P>
+      </div>
+    </div>
+
+    <div class="infoCocktail">
+      <div class="imgbxContainer">
+        <div class="bxImg">
+          <img src="../../../../../assets/img/ilustraciones/cocktail-solid 1.png" alt="">
+        </div>
+      </div>
+      <div class="text">
+        <h3 class="title3">Distiontiv Flavor</h3>
+        <P>
+          Bitterweet and slightly <br>
+          woody flavor is the <br>
+          signature of any gin.
+        </P>
+      </div>
+    </div>
+
+    <div class="infoCocktail">
+      <div class="imgbxContainer">
+        <div class="bxImg">
+          <img src="../../../../../assets/img/ilustraciones/Vector.png" alt="">
+        </div>
+      </div>
+      <div class="text">
+        <h3 class="title3">Purity</h3>
+        <P>
+          This gives it a clean, pure feel, <br>
+          without the caramel or vanilla notes <br>
+          that come from barrel aging.
         </P>
       </div>
     </div>
