--- a/src/app/pages/cocktail-landing/cocktail-landing.component.scss
+++ b/src/app/pages/cocktail-landing/cocktail-landing.component.scss
@@ -1,3 +1,12 @@
+.containerComponent{
+  //display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  //padding: 5px;
+  transition: all 300ms ease;
+  background: red;
+}
 /* .containerBanner{
   display: flex;
   width: 100%;
