mobile banner full

--- a/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.html
+++ b/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.html
@@ -52,7 +52,7 @@
       </div>
       <div class="text">
         <h3 class="title3">Versatility</h3>
-        <P>
+        <P class="info">
           The range of flavors in gin is <br>
           exceptionally wide, thanks to the <br>
           variety of botaniclas that can be <br>
@@ -69,7 +69,7 @@
       </div>
       <div class="text">
         <h3 class="title3">Distiontiv Flavor</h3>
-        <P>
+        <P class="info">
           Bitterweet and slightly <br>
           woody flavor is the <br>
           signature of any gin.
@@ -85,7 +85,7 @@
       </div>
       <div class="text">
         <h3 class="title3">Purity</h3>
-        <P>
+        <P class="info">
           This gives it a clean, pure feel, <br>
           without the caramel or vanilla notes <br>
           that come from barrel aging.
