--- a/src/app/pages/cocktail-landing/cocktail-landing.component.scss
+++ b/src/app/pages/cocktail-landing/cocktail-landing.component.scss
@@ -5,7 +5,7 @@
   align-items: center;
   //padding: 5px;
   transition: all 300ms ease;
-  background: red;
+  //background: red;
 }
 /* .containerBanner{
   display: flex;
