container banner mobile background

--- a/src/app/pages/cocktail-landing/cocktail-landing.component.scss
+++ b/src/app/pages/cocktail-landing/cocktail-landing.component.scss
@@ -6,6 +6,12 @@
   //padding: 5px;
   transition: all 300ms ease;
   //background: red;
+  background: url(../../../assets/img/ilustraciones/Lineas-fondo.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 95%;
+  margin: 10px 0px;
+  transition: all 300ms ease;
 }
 /* .containerBanner{
   display: flex;
