banner responsive desktop

--- a/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.html
+++ b/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.html
@@ -1,97 +1,101 @@
 <div class="containerbanner">
 
-  <div class="infoContet">
-    <h1 class="title">
-      Drink of the moment
-    </h1>
-    <div class="textContent">
-      <p class="text">
-        Gin, also known as gin, is one of the most
-        popular and appreciated alcoholic beverages
-        worldwide, especially for its versatility in
-        cocktails. Originally from Europe, this spirit has
-        evolved over the centuries and comes in a wide
-        range of styles and flavors.
-      </p>
-    </div>
-    <h1 class="title">
-      4.9
-    </h1>
-    <div class="containerbutton">
-      <button class="primary-botton">
-        Try now
-        <i class="pi pi-chevron-right"></i>
-      </button>
-    </div>
-  </div>
+  <div class="banner">
 
-  <div class="imgBoxInfo">
-    <div class="imgBx">
-      <div class="bg1">
-        <div class="bg2">
-          <div class="ginContet">
-            <img src="assets/img/ilustraciones/Botella-Gin-centro.png" alt="">
+    <div class="infoContet">
+      <h1 class="title titleDesktop">
+        Drink of the moment
+      </h1>
+      <div class="textContent">
+        <p class="text">
+          Gin, also known as gin, is one of the most
+          popular and appreciated alcoholic beverages
+          worldwide, especially for its versatility in
+          cocktails. Originally from Europe, this spirit has
+          evolved over the centuries and comes in a wide
+          range of styles and flavors.
+        </p>
+      </div>
+      <h1 class="title">
+        4.9
+      </h1>
+      <div class="containerbutton">
+        <button class="primary-botton">
+          Try now
+          <i class="pi pi-chevron-right"></i>
+        </button>
+      </div>
+    </div>
+
+    <div class="imgBoxInfo">
+      <div class="imgBx">
+        <div class="bg1">
+          <div class="bg2">
+            <div class="ginContet">
+              <img src="assets/img/ilustraciones/Botella-Gin-centro.png" alt="">
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="containerbutton">
-      <button class="primary-botton">
-        Try now
-        <i class="pi pi-chevron-right"></i>
-      </button>
-    </div>
-  </div>
-
-  <div class="infoList">
-    <div class="infoCocktail">
-      <div class="imgbxContainer">
-        <div class="bxImg">
-          <img src="../../../../../assets/img/ilustraciones/water-solid 1.png" alt="">
-        </div>
-      </div>
-      <div class="text">
-        <h3 class="title3">Versatility</h3>
-        <P class="info">
-          The range of flavors in gin is <br>
-          exceptionally wide, thanks to the <br>
-          variety of botaniclas that can be <br>
-          used in its productions
-        </P>
+      <div class="containerbutton">
+        <button class="primary-botton">
+          Try now
+          <i class="pi pi-chevron-right"></i>
+        </button>
       </div>
     </div>
 
-    <div class="infoCocktail">
-      <div class="imgbxContainer">
-        <div class="bxImg">
-          <img src="../../../../../assets/img/ilustraciones/cocktail-solid 1.png" alt="">
+    <div class="infoList">
+      <div class="infoCocktail">
+        <div class="imgbxContainer">
+          <div class="bxImg">
+            <img src="../../../../../assets/img/ilustraciones/water-solid 1.png" alt="">
+          </div>
+        </div>
+        <div class="text">
+          <h3 class="title3">Versatility</h3>
+          <P class="info">
+            The range of flavors in gin is <br>
+            exceptionally wide, thanks to the <br>
+            variety of botaniclas that can be <br>
+            used in its productions
+          </P>
         </div>
       </div>
-      <div class="text">
-        <h3 class="title3">Distiontiv Flavor</h3>
-        <P class="info">
-          Bitterweet and slightly <br>
-          woody flavor is the <br>
-          signature of any gin.
-        </P>
+
+      <div class="infoCocktail">
+        <div class="imgbxContainer">
+          <div class="bxImg">
+            <img src="../../../../../assets/img/ilustraciones/cocktail-solid 1.png" alt="">
+          </div>
+        </div>
+        <div class="text">
+          <h3 class="title3">Distiontiv Flavor</h3>
+          <P class="info">
+            Bitterweet and slightly <br>
+            woody flavor is the <br>
+            signature of any gin.
+          </P>
+        </div>
+      </div>
+
+      <div class="infoCocktail">
+        <div class="imgbxContainer">
+          <div class="bxImg">
+            <img src="../../../../../assets/img/ilustraciones/Vector.png" alt="">
+          </div>
+        </div>
+        <div class="text">
+          <h3 class="title3">Purity</h3>
+          <P class="info">
+            This gives it a clean, pure feel, <br>
+            without the caramel or vanilla notes <br>
+            that come from barrel aging.
+          </P>
+        </div>
       </div>
     </div>
 
-    <div class="infoCocktail">
-      <div class="imgbxContainer">
-        <div class="bxImg">
-          <img src="../../../../../assets/img/ilustraciones/Vector.png" alt="">
-        </div>
-      </div>
-      <div class="text">
-        <h3 class="title3">Purity</h3>
-        <P class="info">
-          This gives it a clean, pure feel, <br>
-          without the caramel or vanilla notes <br>
-          that come from barrel aging.
-        </P>
-      </div>
-    </div>
   </div>
 
 </div>
