--- a/src/app/pages/cocktail-landing/cocktail-landing.component.scss
+++ b/src/app/pages/cocktail-landing/cocktail-landing.component.scss
@@ -7,7 +7,7 @@
   transition: all 300ms ease;
   //background: red;
   background: url(../../../assets/img/ilustraciones/Lineas-fondo.png);
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
   background-position: center;
   background-size: 95%;
   margin: 10px 0px;
@@ -42,3 +42,10 @@
   }
 }
  */
+
+ @media screen and (min-width: 900px){
+  .containerComponent{
+    background-size: 70%;
+    background-repeat: no-repeat;
+  }
+}
