--- a/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.scss
+++ b/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.scss
@@ -1,155 +1,12 @@
 .containerbanner{
   display: flex;
   width: 100%;
-  flex-direction: column;
   /* centrado horizontal */
-  align-items: center;
-  /* centrado vertical */
   justify-content: center;
+  /* centrado vertical */
+  align-items: center;
   //background: yellow;
-
-  .infoContet{
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    /* centrado horizontal */
-    align-items: center;
-    /* centrado vertical */
-    justify-content: center;
-    //background: green;
-
-    h1.title{
-      display: flex;
-      width: 100%;
-      justify-content: center;
-      align-items: center;
-      //background: red;
-      text-align: center;
-      font-size: 40px;
-    }
-
-    .textContent{
-      display: flex;
-      width: 95%;
-      //background: blue;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      font-size: 18px;
-      padding: 20px 0px;
-      p.text{
-        font-size: 20px;
-        //background: orange;
-      }
-    }
-
-    .containerbutton{
-      display: none;
-    }
-
-  }
-
-  .imgBoxInfo{
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    //position: relative;
-    padding: 20px 0px;
-    //background: fuchsia;
-
-    .imgBx{
-      display: flex;
-      width: 350px;
-      height: 350px;
-      justify-content: center;
-      align-items: center;
-      overflow: hidden;
-      border-radius: 50%;
-      //clip-path: circle(50% at 50% 50%);
-      background: var(--primary-color);
-      //padding: 40px;
-      .bg1{
-        display: flex;
-        width: 350px;
-        height: 350px;
-        justify-content: center;
-        align-items: center;
-        background: url(/assets/img/ilustraciones/Fruta-roja-centro.png);
-        background-repeat: no-repeat;
-        background-position: -5% 75%;
-        padding: 0;
-        .bg2{
-          display: flex;
-          width: 350px;
-          height: 350px;
-          justify-content: center;
-          align-items: center;
-          background: url(/assets/img/ilustraciones/Palitos-cafe-centro.png);
-          background-repeat: no-repeat;
-          background-position: right 0% bottom 45%;
-          padding: 0;
-          .ginContet{
-            //position: relative;
-            width: 130px;
-            //height: 250px;
-            overflow: hidden;
-            cursor: pointer;
-            /*object-fit: contain;
-            display: flex;
-            justify-content: center;
-            align-items: center; */
-            //border-radius: 20% 20%;
-            //box-shadow: rgba(153, 23, 255, 0.25) 0px 14px 28px, rgba(153, 23, 255, 0.22) 0px 10px 10px;
-            &:hover{
-              -webkit-transform: rotateZ(-10deg);
-              -ms-transform: rotateZ(-10deg);
-              transform: rotateZ(-10deg);
-              transition: 1s ease;
-            }
-            img{
-              //width: 70%;
-              //position: absolute;
-              bottom: 0;
-              //left: 0;
-              width: 100%;
-              object-fit: cover;
-              transition: 0.5s ease-in-out;
-              //transform-origin: bottom;
-            }
-          }
-        }
-      }
-    }
-
-    .containerbutton{
-      display: flex;
-      width: 100%;
-      justify-content: center;
-      align-items: center;
-      padding: 10px 0px;
-      margin: 10px 0px;
-      //background: lawngreen;
-      button.primary-botton{
-        width: 50%;
-        font-size: 22px;
-        font-weight: 500;
-        i{
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          text-align: center;
-          width: 20px;
-          height: 20px;
-          font-size: 18px;
-          padding: 5px;
-        }
-      }
-    }
-  }
-
-  .infoList{
+  .banner{
     display: flex;
     width: 100%;
     flex-direction: column;
@@ -159,7 +16,7 @@
     justify-content: center;
     //background: yellow;
 
-    .infoCocktail{
+    .infoContet{
       display: flex;
       width: 100%;
       flex-direction: column;
@@ -167,38 +24,149 @@
       align-items: center;
       /* centrado vertical */
       justify-content: center;
-      margin: 10px 0px;
-      //background: orange;
-      .imgbxContainer{
+      //background: green;
+
+      h1.title{
         display: flex;
         width: 100%;
-        /* centrado Vertical */
-        align-items: center;
-        /* centrado horizontal */
         justify-content: center;
-        padding: 10px 0px;
-        //background: green;
-        .bxImg{
+        align-items: center;
+        //background: red;
+        text-align: center;
+        font-size: 40px;
+      }
+
+      .textContent{
+        display: flex;
+        width: 95%;
+        //background: blue;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 18px;
+        padding: 20px 0px;
+        p.text{
+          font-size: 20px;
+          //background: orange;
+        }
+      }
+
+      .containerbutton{
+        display: none;
+      }
+
+    }
+
+    .imgBoxInfo{
+      display: flex;
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      //position: relative;
+      padding: 20px 0px;
+      //background: fuchsia;
+
+      .imgBx{
+        display: flex;
+        width: 350px;
+        height: 350px;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+        border-radius: 50%;
+        //clip-path: circle(50% at 50% 50%);
+        background: var(--primary-color);
+        .bg1{
           display: flex;
-          width: 100px;
-          height: 100px;
-          border-radius: 50%;
+          width: 350px;
+          height: 350px;
           justify-content: center;
           align-items: center;
-          background: var(--primary-color);
-          img{
-            /* //width: 70%;
-            position: absolute;
-            bottom: 0;
-            //left: 0; */
-            width: 60%;
-            object-fit: cover;
-            transition: 0.5s ease-in-out;
-            //transform-origin: bottom;
+          background: url(/assets/img/ilustraciones/Fruta-roja-centro.png);
+          background-repeat: no-repeat;
+          background-position: -5% 75%;
+          padding: 0;
+          .bg2{
+            display: flex;
+            width: 350px;
+            height: 350px;
+            justify-content: center;
+            align-items: center;
+            background: url(/assets/img/ilustraciones/Palitos-cafe-centro.png);
+            background-repeat: no-repeat;
+            background-position: right 0% bottom 45%;
+            padding: 0;
+            .ginContet{
+              //position: relative;
+              width: 130px;
+              //height: 250px;
+              overflow: hidden;
+              cursor: pointer;
+              /*object-fit: contain;
+              display: flex;
+              justify-content: center;
+              align-items: center; */
+              //border-radius: 20% 20%;
+              //box-shadow: rgba(153, 23, 255, 0.25) 0px 14px 28px, rgba(153, 23, 255, 0.22) 0px 10px 10px;
+              &:hover{
+                -webkit-transform: rotateZ(-10deg);
+                -ms-transform: rotateZ(-10deg);
+                transform: rotateZ(-10deg);
+                transition: 1s ease;
+              }
+              img{
+                //width: 70%;
+                //position: absolute;
+                bottom: 0;
+                //left: 0;
+                width: 100%;
+                object-fit: cover;
+                transition: 0.5s ease-in-out;
+                //transform-origin: bottom;
+              }
+            }
           }
         }
       }
-      .text{
+
+      .containerbutton{
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        padding: 10px 0px;
+        margin: 10px 0px;
+        //background: lawngreen;
+        button.primary-botton{
+          width: 50%;
+          font-size: 22px;
+          font-weight: 500;
+          i{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            width: 20px;
+            height: 20px;
+            font-size: 18px;
+            padding: 5px;
+          }
+        }
+      }
+    }
+
+    .infoList{
+      display: flex;
+      width: 100%;
+      flex-direction: column;
+      /* centrado horizontal */
+      align-items: center;
+      /* centrado vertical */
+      justify-content: center;
+      //background: yellow;
+
+      .infoCocktail{
         display: flex;
         width: 100%;
         flex-direction: column;
@@ -206,26 +174,66 @@
         align-items: center;
         /* centrado vertical */
         justify-content: center;
-        //background: red;
-        h3.title3{
-          font-family: var(--font-family);
-          color: var(--font-color);
-          text-align: center;
-          font-size: 30px;
-          font-weight: 700;
-          padding: 10px;
-          margin-bottom: 5px;
-          //background: yellow;
-        }
-        p.info{
+        margin: 10px 0px;
+        //background: orange;
+        .imgbxContainer{
           display: flex;
-          width: 90%;
-          //background: orange;
-          text-align: start;
-          font-size: 20px;
-          font-weight: 100;
-          font-family: var(--font-family);
-          color: var(--font-color);
+          width: 100%;
+          /* centrado Vertical */
+          align-items: center;
+          /* centrado horizontal */
+          justify-content: center;
+          padding: 10px 0px;
+          //background: green;
+          .bxImg{
+            display: flex;
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            justify-content: center;
+            align-items: center;
+            background: var(--primary-color);
+            img{
+              /* //width: 70%;
+              position: absolute;
+              bottom: 0;
+              //left: 0; */
+              width: 60%;
+              object-fit: cover;
+              transition: 0.5s ease-in-out;
+              //transform-origin: bottom;
+            }
+          }
+        }
+        .text{
+          display: flex;
+          width: 100%;
+          flex-direction: column;
+          /* centrado horizontal */
+          align-items: center;
+          /* centrado vertical */
+          justify-content: center;
+          //background: red;
+          h3.title3{
+            font-family: var(--font-family);
+            color: var(--font-color);
+            text-align: center;
+            font-size: 30px;
+            font-weight: 700;
+            padding: 10px;
+            margin-bottom: 5px;
+            //background: yellow;
+          }
+          p.info{
+            display: flex;
+            width: 90%;
+            //background: orange;
+            text-align: start;
+            font-size: 20px;
+            font-weight: 100;
+            font-family: var(--font-family);
+            color: var(--font-color);
+          }
         }
       }
     }
@@ -235,80 +243,101 @@
 
 @media screen and (min-width: 900px){
   .containerbanner{
-
-    .infoContet{
-
-      h1.title{
-
-      }
-
-      .textContent{
-
-        p.text{
-
+    background: yellow;
+    width: 100%;
+    //height: 85vh;
+    .banner{
+      flex-direction: row;
+      justify-content: space-between;
+      max-width: 1300px;
+      //flex-wrap: wrap;
+      background: orange;
+      .infoContet{
+        height: 100%;
+        /* alineacion horizontal */
+        align-items: flex-start;
+        background: green;
+        h1.title{
+          justify-content: flex-start;
+          text-align: start;
+          background: red;
         }
+        h1.titleDesktop{
+          font-size: 60px;
+          font-weight: 600;
+        }
+
+        .textContent{
+          background: fuchsia;
+          p.text{
+            text-align: start;
+            font-size: 15px;
+          }
+        }
+
+        .containerbutton{
+          display: flex;
+          width: 100%;
+          padding: 20px 0px;
+          margin-top: 10px;
+          background: lightcoral;
+        }
+
       }
 
-      .containerbutton{
+      .imgBoxInfo{
+        background: blue;
+        padding: 0px 0px;
+        .imgBx{
+          padding: 0px;
+          .bg1{
 
-      }
+            .bg2{
 
-    }
+              .ginContet{
 
-    .imgBoxInfo{
+                &:hover{
 
+                }
+                img{
 
-      .imgBx{
-
-        .bg1{
-
-          .bg2{
-
-            .ginContet{
-
-              &:hover{
-
-              }
-              img{
-
+                }
               }
             }
           }
         }
-      }
 
-      .containerbutton{
-
-        button.primary-botton{
-
-          i{
-
-          }
+        .containerbutton{
+          display: none;
         }
       }
-    }
 
-    .infoList{
-
-
-      .infoCocktail{
-
-        .imgbxContainer{
-
-          .bxImg{
-
-            img{
-
+      .infoList{
+        background: lawngreen;
+        padding: 0px;
+        .infoCocktail{
+          flex-direction: row;
+          background: fuchsia;
+          align-items: flex-start;
+          .imgbxContainer{
+            width: 20%;
+            background: red;
+            .bxImg{
+              width: 60px;
+              height: 60px;
             }
           }
-        }
-        .text{
-
-          h3.title3{
-
-          }
-          p.info{
-
+          .text{
+            width: 80%;
+            background: purple;
+            align-items: flex-start;
+            h3.title3{
+              font-size: 20px;
+              background: yellow;
+            }
+            p.info{
+              font-size: 15px;
+            }
           }
         }
       }
