--- a/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.scss
+++ b/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.scss
@@ -243,7 +243,7 @@
 
 @media screen and (min-width: 900px){
   .containerbanner{
-    background: yellow;
+    //background: yellow;
     width: 100%;
     //height: 85vh;
     .banner{
@@ -251,16 +251,16 @@
       justify-content: space-between;
       max-width: 1300px;
       //flex-wrap: wrap;
-      background: orange;
+      //background: orange;
       .infoContet{
         height: 100%;
         /* alineacion horizontal */
         align-items: flex-start;
-        background: green;
+        //background: green;
         h1.title{
           justify-content: flex-start;
           text-align: start;
-          background: red;
+          //background: red;
         }
         h1.titleDesktop{
           font-size: 60px;
@@ -268,7 +268,7 @@
         }
 
         .textContent{
-          background: fuchsia;
+          //background: fuchsia;
           p.text{
             text-align: start;
             font-size: 15px;
@@ -280,48 +280,32 @@
           width: 100%;
           padding: 20px 0px;
           margin-top: 10px;
-          background: lightcoral;
+          //background: lightcoral;
         }
 
       }
 
       .imgBoxInfo{
-        background: blue;
+        //background: blue;
         padding: 0px 0px;
         .imgBx{
           padding: 0px;
-          .bg1{
-
-            .bg2{
-
-              .ginContet{
-
-                &:hover{
-
-                }
-                img{
-
-                }
-              }
-            }
-          }
         }
-
         .containerbutton{
           display: none;
         }
       }
 
       .infoList{
-        background: lawngreen;
+        //background: lawngreen;
         padding: 0px;
         .infoCocktail{
           flex-direction: row;
-          background: fuchsia;
+          //background: fuchsia;
           align-items: flex-start;
           .imgbxContainer{
             width: 20%;
-            background: red;
+            //background: red;
             .bxImg{
               width: 60px;
               height: 60px;
@@ -329,11 +313,11 @@
           }
           .text{
             width: 80%;
-            background: purple;
+            //background: purple;
             align-items: flex-start;
             h3.title3{
               font-size: 20px;
-              background: yellow;
+              //background: yellow;
             }
             p.info{
               font-size: 15px;
